--- a/index.css
+++ b/index.css
@@ -1,7 +1,50 @@
-.nav-frame {
-    width: 100px;
-    transition: width 0.3s;
+*
+{
+    margin: 0;
+    border: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 .collapsed {
-    width: 5px;
+    width: 0px !important;
+    visibility: none !important;
+}
+#toggleButton:hover
+{
+    background-color: #c2c2c2;
+}
+#toggleButton
+{
+    background-color: transparent;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    width: 40px;
+    height: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+#frame
+{
+    display: flex;
+    flex-direction: row;
+}
+
+#frame #nav
+{
+    width: 250px;
+    transition: width 0.3s;
+    height: 100vh;
+    overflow: hidden;
+}
+
+#frame #clock
+{
+    width: 100%; 
+    height: 100vh;
+    overflow: hidden;
 }
