--- a/nav.css
+++ b/nav.css
@@ -1,18 +1,27 @@
-body {
-    padding: 0;
+*
+{
     margin: 0;
-    background-color: rgb(98, 95, 98);
+    border: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #f9f9f9;
     overflow: hidden;
 }
 
 .bg {
-    margin: 0;
-    padding: 0;
     width: 100%;
-    height: calc(100vh);
+    height: 100vh;
     background-size: cover;
     background-attachment: fixed;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 60px;
+    /* padding-left: 10px; */
 }
 
 a,
@@ -20,19 +29,25 @@ a:hover,
 a:focus {
     color: inherit;
     text-decoration: none;
-    transition: all 0.8s;
+    /* transition: all 0.9s; */
 }
 
 .divItem {
-    width: 100%;
-    height: 26px;
-    padding: 6px;
-    transition: all 0.8s ease-in-out;
-    font-weight: bold;
-    color: cornsilk;
+    width: 225px;
+    height: 35px;
+    border-radius: 5px;
+    transition: all 0.9s ease-in-out;
+    color: rgb(0, 0, 0);
+    /* padding-left: 10px; */
+    text-align: center;
+    vertical-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .divItem:hover {
     background-color: rgb(81, 83, 204);
+    /* background-color: #c2c2c2; */
     color: floralwhite;
 }
