--- a/nav.css
+++ b/nav.css
@@ -21,7 +21,6 @@ body {
     flex-direction: column;
     align-items: center;
     padding-top: 60px;
-    /* padding-left: 10px; */
 }
 
 a,
@@ -29,16 +28,14 @@ a:hover,
 a:focus {
     color: inherit;
     text-decoration: none;
-    /* transition: all 0.9s; */
 }
 
 .divItem {
-    width: 225px;
-    height: 35px;
+    width: 240px;
+    height: 40px;
     border-radius: 5px;
     transition: all 0.9s ease-in-out;
     color: rgb(0, 0, 0);
-    /* padding-left: 10px; */
     text-align: center;
     vertical-align: center;
     display: flex;
@@ -46,8 +43,8 @@ a:focus {
     justify-content: center;
 }
 
+/* 功能选择悬停效果 */
 .divItem:hover {
     background-color: rgb(81, 83, 204);
-    /* background-color: #c2c2c2; */
     color: floralwhite;
 }
