--- a/alarm.css
+++ b/alarm.css
@@ -39,7 +39,8 @@ html
 
 .alarmModule:hover
 {
-    background-color:rgb(230, 230, 230);
+    /* background-color:rgb(230, 230, 230); */
+    background-color: #f9f9f9;
 }
 
 .alarmModule
@@ -50,8 +51,6 @@ html
     display: flex;
     flex-direction: row;
     padding-left: 10px;
-    /* justify-content: center; */
-    
 }
 
 .alarmModule .alarminfo
@@ -81,7 +80,6 @@ html
     position: relative;
     width: 60px;
     height: 34px;
-    justify-self: center;
     margin-top: 30px;
 }
 
@@ -120,7 +118,8 @@ html
 
 .checked .slider 
 {
-    background-color: #2196F3;
+    /* background-color: #2196F3; */
+    background-color: rgb(81, 83, 204);
 }
 
 .checked .slider:before 
@@ -184,6 +183,10 @@ html
     height: 45px;
     width: 45px;
     border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 #modal #modalwindow #head #delete:hover
@@ -195,28 +198,110 @@ html
 {
     width: 100%;
     height: 70%;
-    padding: 20px;
+    padding: 10px 20px 20px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 1.5rem;
 }
 
-#modal #modalwindow #body #name
+#modal #modalwindow #body #clock
 {
+    height: 60%;
+    aspect-ratio: 1 / 1;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+}
+
+#modal #modalwindow #body #timeInput
+{
+    
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+
+    margin-top: 5px;
+    height: 15%;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    font-size: 2em;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.5rem;
+    font-weight: bold;
 }
 
-#modal #modalwindow #body #name #text
+/* input[type="number"] 
 {
-    width: 30%;
-    height: 100%;
+    -moz-appearance: textfield;
+    appearance: textfield;
+    margin: 0;
+} */
+#modal #modalwindow #body #timeInput > input[type = "number"]
+{
+    width: 20%;
+    height: 80%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-size: 1em;
+    text-align: center;
+    box-shadow: 0 0 2px 0 gray;
+    border-radius: 5px;
 }
 
-#modal #modalwindow #body #name > input
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background-color: #ccc;
+  color: #fff;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+input[type="number"]::-webkit-inner-spin-button::after {
+  content: "+";
+}
+
+input[type="number"]::-webkit-outer-spin-button::after {
+  content: "-";
+}
+
+#modal #modalwindow #body #nameInput
 {
-    width: 70%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    height: 15%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#modal #modalwindow #body #nameInput #text
+{
+    width: 20%;
     height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#modal #modalwindow #body #nameInput > input
+{
+    width: 80%;
+    height: 80%;
     padding: 8px;
     border-radius: 5px;
+    box-shadow: 0 0 2px 0 gray;
 }
 
 #modal #modalwindow #foot
@@ -273,7 +358,7 @@ html
     box-shadow: 0 0 6px -2px gray;
 }
 
-.operation
+#editButton .operation
 {
     width: 50%;
     height: 100%;
@@ -286,7 +371,7 @@ html
     align-items: center;
 }
 
-.operation:hover
+#editButton .operation:hover
 {
     background-color: #c2c2c2;
 }
