--- a/alarm.css
+++ b/alarm.css
@@ -57,7 +57,7 @@ html
 {
     padding-top: 20px;
     padding-left: 10px;
-    width: 85%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     color: #c2c2c2;
@@ -75,12 +75,48 @@ html
     font-weight: normal;
 }
 
+.alarmModule .deleteIcon
+{
+    display: none;
+}
+
+.del .alarmModule .deleteIcon:hover
+{
+    /* background-color: #c2c2c2; */
+    margin-top: 27px;
+}
+
+.del .alarmModule .deleteIcon
+{
+    width: 50px;
+    height: 50px;
+    margin-top: 30px;
+    margin-left: 20px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s ease-in-out;
+}
+
+.switch:hover
+{
+    margin-top: 37px;
+}
+
 .switch 
 {
     position: relative;
     width: 60px;
     height: 34px;
-    margin-top: 30px;
+    margin-top: 40px;
+    transition: margin-top 0.3s ease-in-out;
+}
+
+.del .alarmModule .switch
+{
+    display: none
 }
 
 .switch input 
