--- a/alarm.css
+++ b/alarm.css
@@ -254,9 +254,9 @@ html
 #modal #modalwindow #body #timeInput
 {
     
-    border-style: solid;
+    /* border-style: solid;
     border-width: 1px;
-    border-color: black;
+    border-color: black; */
 
     margin-top: 5px;
     height: 15%;
@@ -310,9 +310,9 @@ input[type="number"]::-webkit-outer-spin-button::after {
 
 #modal #modalwindow #body #nameInput
 {
-    border-style: solid;
+    /* border-style: solid;
     border-width: 1px;
-    border-color: black;
+    border-color: black; */
     height: 15%;
     width: 100%;
     display: flex;
