--- a/timer.css
+++ b/timer.css
@@ -502,8 +502,21 @@ html
     justify-content: center;
     align-items: center;
 }
-
 #editButton .operation:hover
 {
     background-color: #c2c2c2;
+}
+.displace#editButton .operation #del
+{
+    display: none;
+}
+
+#editButton .operation #ok
+{
+    display: none;
+}
+
+.displace#editButton .operation #ok
+{
+    display: block;
 }
