--- a/clock.css
+++ b/clock.css
@@ -4,6 +4,7 @@
     border: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 10px;
 }
 
 body
@@ -43,10 +44,18 @@ body
     margin-top: 120px;
 }
 
+#toggleButton:hover
+{
+    top: -3px;
+}
+
 #toggleButton
 {
-    height: 20px;
-    width: 40px;
+    position: relative;
+    top: 0;
+    background-color: transparent;
+    margin-bottom: -10px;
+    transition: all 0.3s ease-in-out;
 }
 .collapsed
 {
@@ -61,11 +70,12 @@ body
     /* margin: 60px auto; */
     align-items: center;
     transition: height 0.8s ease-in-out;
+    overflow: hidden;
 }
 
 #setTime #inputs 
 {
-    height: 50%;
+    height: 60%;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -75,34 +85,31 @@ body
 
 #setTime #buttons 
 {
-    height: 50%;
+    height: 40%;
     width: 100%;
     display: flex;
     flex-direction: row;
-    /* justify-content: center; */
+    justify-content: center;
     justify-content: space-around;
     align-items: center;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 #setTime #inputs > input[type="number"] {
     height: 100%;
+    width: 15%;
     text-align: center;
-    /* font-size: 30px; */
+    font-size: 2em;
 }
 
 #setTime #buttons > button 
 {
-    /* margin: 5px; */
-    /* width: 140px; */
+    margin: 5px;
     width: 30%;
     height: 100%;
-    /* font-size: 20px; */
+    font-size: 1.5em;
 }
-/* #setTime #buttons > button > div
-{
-    height: 100%;
-    width: 100%;
-} */
 
 #setTime label[for="hour-input"],
 #setTime label[for="minute-input"],
@@ -110,8 +117,9 @@ body
 {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 2px;
     height: 100%;
-    /* position: relative; */
-    /* left: 2px; */
-    /* font-size: 30px; */
+    font-size: 2em;
 }
