--- a/stopwatch.css
+++ b/stopwatch.css
@@ -1,3 +1,23 @@
+*
+{
+    margin: 0;
+    border: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html
+{
+    font-size: 10px;
+}
+body
+{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 #stopwatch {
     font-size: 70px;
     margin-bottom: 20px;
@@ -77,7 +97,7 @@ button:disabled {
 
 #clock {
     display: block;
-    margin: 0 auto;
+    margin-top: -80px;
     width: 400px;
     height: 400px;
     transform: translateY(10px);
@@ -118,16 +138,22 @@ button:disabled {
 
 }
 
-/*new code*/
-#recordArea{
+#recordArea.displayed
+{
     display: grid;
+}
+
+/*new code*/
+#recordArea
+{
     grid-template-columns: 600px;
     grid-template-rows: repeat(1, 100px);
     grid-gap: 10px;
 
     overflow: auto;
+    display: none;
 
-    width: 620px;
+    width: 650px;
     height: 230px;
     margin: 0 auto;
     margin-top: 20px;
@@ -140,9 +166,21 @@ button:disabled {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+#recordArea::-webkit-scrollbar
+{
+    width: 5px;
+    background-color: transparent;
+}
+
+#recordArea::-webkit-scrollbar-thumb
+{
+    border-radius: 5px;
+    background-color: #555;
+}
+
 .recordInfo{
     background-color: transparent;
-    border-radius: 3%;
+    border-radius: 5px;
     box-shadow: 0 0 6px -2px gray;
     border: 1px solid #ccc;
 }
