--- a/timer.css
+++ b/timer.css
@@ -1,7 +1,3 @@
-/* #timerDisplay {
-    font-size: 24px;
-    margin-bottom: 20px;
-} */
 *
 {
     margin: 0;
@@ -196,7 +192,6 @@ html
     width: 50px;
     height: 50px;
     margin-top: 30px;
-    /* margin-left: 20px; */
     border-radius: 5px;
     display: flex;
     flex-direction: row;
@@ -213,8 +208,6 @@ html
 
 .timerModule .body .enlargeIcon:hover
 {
-    /* background-color: rgba(81, 83, 204, 0.418); */
-    /* background-color: #c2c2c2; */
     margin-top: 27px;
 }
 
@@ -225,7 +218,6 @@ html
     height: 40px;
     margin-top: 30px;
     border-radius: 5px;
-    /* transition: all 0.3s ease-in-out; */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -248,9 +240,18 @@ html
     align-items: flex-start;
 }
 
+/* .timerModule .operations .play.disabled
+{
+    background-color: #c2c2c2;
+}
+
+.timerModule .operations .play。disabled:hover
+{
+    background-color: #c2c2c2;
+} */
+
 .timerModule .operations .play:hover
 {
-    /* background-color: rgb(90, 92, 224); */
     background-color: rgba(81, 83, 204, 0.804);
 }
 
@@ -329,7 +330,7 @@ html
 #modal #modalwindow
 {
     width: 300px;
-    height: 500px;
+    height: 300px;
     background-color: #efefef;
     border-radius: 10px;
     box-shadow: 0 0 5px 0 gray;
@@ -338,7 +339,7 @@ html
 #modal #modalwindow #head
 {
     width: 100%;
-    height: 15%;
+    height: 25%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -373,7 +374,7 @@ html
 #modal #modalwindow #body
 {
     width: 100%;
-    height: 70%;
+    height: 50%;
     padding: 10px 20px 20px 20px;
     display: flex;
     flex-direction: column;
@@ -384,13 +385,9 @@ html
 
 #modal #modalwindow #body #timeInput
 {
-    
-    /* border-style: solid;
-    border-width: 1px;
-    border-color: black; */
-
     margin-top: 5px;
-    height: 15%;
+    padding-bottom: 5px;
+    height: 50%;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -416,11 +413,9 @@ html
 
 #modal #modalwindow #body #nameInput
 {
-    /* border-style: solid;
-    border-width: 1px;
-    border-color: black; */
-    height: 15%;
+    height: 50%;
     width: 100%;
+    padding-top: 5px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -449,7 +444,7 @@ html
 #modal #modalwindow #foot
 {
     width: 100%; 
-    height: 15%;
+    height: 25%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
