--- a/nav.css
+++ b/nav.css
@@ -25,12 +25,23 @@ body {
 
 a,
 a:hover,
-a:focus {
+a:focus 
+{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     color: inherit;
     text-decoration: none;
 }
 
-.divItem {
+.divItem.focusedDiv
+{
+    background-color: rgba(81, 83, 204, 0.144);
+}
+.divItem 
+{
     width: 240px;
     height: 40px;
     border-radius: 5px;
