--- a/stopwatch.css
+++ b/stopwatch.css
@@ -15,7 +15,8 @@ body
     width: 100vw;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
+    justify-content: flex-start;
     align-items: center;
 }
 #stopwatch {
@@ -97,7 +98,7 @@ button:disabled {
 
 #clock {
     display: block;
-    margin-top: -80px;
+    margin-top: 50px;
     width: 400px;
     height: 400px;
     transform: translateY(10px);
